# Djinn

./: .dockerignore  cargo.toml
.github/workflows/: build_server.yml  deploy.yaml
djinn_client_cli/: .gitignore  Cargo.toml  Dockerfile  justfile  lol.txt
djinn_client_cli/src/: main.rs
djinn_client_lib/: Cargo.toml
djinn_client_lib/src/: client_instance.rs  lib.rs
djinn_client_lib/src/commands/: echo.rs  get.rs  mod.rs  put.rs
djinn_client_lib/src/connectivity/: connection.rs  mod.rs
djinn_client_lib/src/syncing/: fs_poller.rs  mod.rs  monkey_sync.rs  packet_handler.rs  sync_handler.rs  sync_manager.rs  transfer.rs  transfer_handler.rs
djinn_core_lib/: Cargo.toml
djinn_core_lib/src/: lib.rs
djinn_core_lib/src/data/: mod.rs
djinn_core_lib/src/data/packets/: control_packet.rs  data_packet.rs  data_packet_generator.rs  mod.rs  packet.rs  packet_reader.rs  packet_type.rs
djinn_core_lib/src/data/syncing/: index_manager.rs  mod.rs
djinn_core_lib/src/jobs/: job.rs
djinn_server/: .gitignore  Cargo.toml  Dockerfile  justfile
djinn_server/src/: main.rs
djinn_server/src/configuration/: application_config.rs  mod.rs
djinn_server/src/connectivity/: connection.rs  connection_data.rs  connection_manager.rs  connection_update.rs  listener.rs  mod.rs
djinn_server/src/jobs/: job.rs  mod.rs
djinn_server/src/processing/: mod.rs  packet_handler.rs
djinn_server/src/processing/control_commands/: control_command.rs  echo_request.rs  mod.rs  sync_index_response.rs  sync_index_update.rs  sync_request.rs  transfer_request.rs  transfer_start.rs
djinn_server/src/syncing/: client_index_handler.rs  index_comparer.rs  mod.rs
djinn_server/src/threads/: mod.rs  thread_pool.rs  thread_worker.rs
infra/: Pulumi.djinn.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
infra/apps/djinn-server/: index.ts
