[package]
name = "djinn_client_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
djinn_client_lib = { path = "../djinn_client_lib" }
futures = "0.3.26"
log = "0.4.17"
pretty_env_logger = "0.4.0"
