[package]
name = "djinn_client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
djinn_core_lib = { path = "../djinn_core_lib" }
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
